--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "gerar-app": "ionic build && ionic cap copy && ionic cap sync && ionic cap open android",
-    "attGit": "git add . && git commit -m \"Atualização do projeto\" && git push origin main"
+    "attGit": "git add . && git commit -m \"Aplicativo\" && git push origin main"
   },
   "private": true,
   "dependencies": {
